# rcfs_iota_codebase

./: README.md  manifest.json  pyproject.toml
docs/: ARCHITECTURE.md
examples/: church6.py  rcfs_fas_demo.py
rcfs_iota/: __init__.py  audit.py  church.py  cli.py  iota.py  lambda_calc.py  rcfs.py  render.py  ski.py  terms.py
tests/: test_core.py
